Fixed Issue #4 section spacing

--- a/src/styles/newHomepage.scss
+++ b/src/styles/newHomepage.scss
@@ -63,3 +63,17 @@ html {
   width: 100vw;
   // position: relative;
 }
+
+#work {
+  // margin-top: 778px;
+  top: 0;
+  position: relative;
+}
+
+#landing-page {
+  position: relative;
+  top: 0;
+  margin-top: 100vhs;
+  height: 100vh;
+  width: 100vw;
+}
